--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                 <h1 class="title is-1 is-size-2-mobile mt-0">Differentiable GPU-Parallelized<br>Task and Motion Planning</h1>
                 
                 <div class="author-info">
+                    <p class="is-size-5">
+                        <a href="https://roboticsconference.org/">Robotics: Science and Systems (RSS) 2025</a>
+                    </p>
                     <p class="subtitle">
                         <div class="is-inline-block is-size-5"><a class="has-text-weight-semibold" href="https://shen.nz">William Shen</a><sup>1,2</sup>,</div>
                         <div class="is-inline-block is-size-5"><a class="has-text-weight-semibold" href="https://web.mit.edu/caelan/www/">Caelan Garrett</a><sup>2</sup>,</div>
@@ -112,11 +115,11 @@
                             <span>arXiv</span>
                         </a>
 
-                        <a class="button is-size-5 mr-1 mt-2" disabled>
+                        <a href="https://github.com/NVlabs/cutamp" class="button is-size-5 mr-1 mt-2">
                             <span class="icon">
                                 <i class="fas fa-code"></i>
                             </span>
-                            <span>Code (coming soon)</span>
+                            <span>Code</span>
                         </a>
                     </div>
                 </div>
